--- a/quienessomos.html
+++ b/quienessomos.html
@@ -80,7 +80,7 @@
     <section>
       <div class="container mt-5 mb-5">
         <img
-          src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Frmejia.jpg?v=1616713542511"
+          src="/assets/img/rmejia.jpg"
           alt="ramos mejia"
           height="170"
           class="float-right ml-2"
