--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <link href="/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FA-de-agostino.ico?v=1635812620714" type="image/x-icon" rel="shortcut icon" />
+    <link href="/assets/img/a-de-agostino.ico" type="image/x-icon" rel="shortcut icon" />
     <!-- Cosas importantes pero no visibles en la pagina web-->
     <!-- Titulo en la pestaña -->
     <title>Agostino Propiedades</title>
@@ -38,7 +38,7 @@
         <a class="logo" href="https://www.agostinoprop.com.ar/">
           <img
             class="logo"
-            src="/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Flogo%20sin%20bordes%20png.png?v=1618583678706"
+            src="/assets/img/logosinbordes.png"
             alt="Logo Agostino"
             width="100%"
             height="100%"
@@ -90,7 +90,7 @@
                 <div
                   title="Casa"
                   class="cover cover-small"
-                  style="background-image:url(/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fscreen.jpg?v=1618856607362)"
+                  style="background-image:url(/assets/img/casa.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ventas</h5>
@@ -111,7 +111,7 @@
                 <div
                   title="Edificio"
                   class="cover cover-small"
-                  style="background-image:url(/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fbrandon-griggs-wR11KBaB86U-unsplash.jpg?v=1617064663666)"
+                  style="background-image:url(/assets/img/edificio.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Alquileres</h5>
@@ -132,7 +132,7 @@
                 <div
                   title="Tasacion"
                   class="cover cover-small"
-                  style="background-image:url(/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fcharles-forerunner-3fPXt37X6UQ-unsplash.jpg?v=1616703939959)"
+                  style="background-image:url(/assets/img/tasacion.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Tasaciones</h5>
@@ -183,7 +183,7 @@
           <a href="https://www.instagram.com/agostinopropiedades/"
               target="_blank">
             <img
-              src="/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fig.png?v=1616708427121"
+              src="/assets/img/ig.png"
               width="32"
               height="32"
             />
@@ -193,7 +193,7 @@
           <a href="https://www.facebook.com/profile.php/?id=100005778559475"
               target="_blank">
             <img
-              src="/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffb.jpg?v=1616708427161"
+              src="/assets/img/fb.png"
               width="30"
               height="30"
             />
@@ -211,7 +211,7 @@
             target="_blank"
           >
             <img
-              src="/assets/img/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fwpp.png?v=1616714255187"
+              src="/assets/img/wpp.png"
               width="32"
               height="32"
             />
