Cambio "tasacion.jpg" por "tasaciones.jpg"

--- a/indexPruebaImagesGit.html
+++ b/indexPruebaImagesGit.html
@@ -132,7 +132,7 @@
                 <div
                   title="Tasacion"
                   class="cover cover-small"
-                  style="background-image:url(/assets/img/tasacion.jpg)"
+                  style="background-image:url(/assets/img/tasaciones.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Tasaciones</h5>
