--- a/ventas.html
+++ b/ventas.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <link
-      href="https://cdn.glitch.me/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FA-de-agostino.ico?v=1635812620714"
+      href="/assets/img/a-de-agostino.ico"
       type="image/x-icon"
       rel="shortcut icon"
     />
@@ -74,7 +74,7 @@
       <div
         class="cover d-flex justify-content-end align-items-start p-5 flex-column"
         style="
-          background-image: url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fpaige-cody-bOVZ_f3fbQM-unsplash.jpg?v=1616703045295);
+          background-image: url(/assets/img/ventas.jpg);
         "
       >
         <h1>Ventas</h1>
@@ -1414,7 +1414,7 @@ Pte. Derqui
           <a href="https://www.instagram.com/agostinopropiedades/"
               target="_blank">
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fig.png?v=1616708427121"
+              src="/assets/img/ig.png"
               width="32"
               height="32"
             />
@@ -1424,7 +1424,7 @@ Pte. Derqui
           <a href="https://www.facebook.com/profile.php/?id=100005778559475"
               target="_blank">
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffb.jpg?v=1616708427161"
+              src="/assets/img/fb.png"
               width="30"
               height="30"
             />
@@ -1442,7 +1442,7 @@ Pte. Derqui
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fwpp.png?v=1616714255187"
+              src="/assets/img/wpp.png"
               width="32"
               height="32"
             />
