--- a/ventas.html
+++ b/ventas.html
@@ -41,7 +41,7 @@
         <a class="logo" href="/">
           <img
             class="logo"
-            src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Flogo%20sin%20bordes%20png.png?v=1618583678706"
+            src="/assets/img/logosinbordes.png"
             alt="Logo Agostino"
             width="100%"
             height="100%"
