--- a/ventas_order_prec_asc.html
+++ b/ventas_order_prec_asc.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <link
-      href="https://cdn.glitch.me/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FA-de-agostino.ico?v=1635812620714"
+      href="/assets/img/a-de-agostino.ico"
       type="image/x-icon"
       rel="shortcut icon"
     />
@@ -41,8 +41,8 @@
         <a class="logo" href="/">
           <img
             class="logo"
-            src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Flogo%20sin%20bordes%20png.png?v=1618583678706"
-            alt="Logo Agostino"
+            src="/assets/img/logosinbordes.png"
+			alt="Logo Agostino"
             width="100%"
             height="100%"
           />
@@ -74,8 +74,8 @@
       <div
         class="cover d-flex justify-content-end align-items-start p-5 flex-column"
         style="
-          background-image: url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fpaige-cody-bOVZ_f3fbQM-unsplash.jpg?v=1616703045295);
-        "
+          background-image: url(/assets/img/ventas.jpg);
+		  "
       >
         <h1>Ventas</h1>
       </div>
@@ -1223,6 +1223,9 @@
       </div>
     </section>
           
+
+
+	  
     <!-- PIE DE PAGINA -->
     <div class="redes">
       <ul class="sociales">
@@ -1230,7 +1233,7 @@
           <a href="https://www.instagram.com/agostinopropiedades/"
               target="_blank">
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fig.png?v=1616708427121"
+              src="/assets/img/ig.png"
               width="32"
               height="32"
             />
@@ -1240,7 +1243,7 @@
           <a href="https://www.facebook.com/profile.php/?id=100005778559475"
               target="_blank">
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffb.jpg?v=1616708427161"
+              src="/assets/img/fb.png"
               width="30"
               height="30"
             />
@@ -1258,7 +1261,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fwpp.png?v=1616714255187"
+              src="/assets/img/wpp.png"
               width="32"
               height="32"
             />
