--- a/tasaciones.html
+++ b/tasaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <link href="https://cdn.glitch.me/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FA-de-agostino.ico?v=1635812620714" type="image/x-icon" rel="shortcut icon" />
+    <link href="/assets/img/a-de-agostino.ico" type="image/x-icon" rel="shortcut icon" />
     <!-- Cosas importantes pero no visibles en la pagina web-->
     <!-- Titulo en la pestaña -->
     <title>Agostino Propiedades</title>
@@ -38,7 +38,7 @@
         <a class="logo" href="/">
           <img
             class="logo"
-            src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Flogo%20sin%20bordes%20png.png?v=1618583678706"
+            src="assets/img/logosinbordes.png""
             alt="Logo Agostino"
             width="100%"
             height="100%"
@@ -65,7 +65,7 @@
       </div>
       <div
         class="cover d-flex justify-content-end align-items-start p-5 flex-column "
-        style="background-image:url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fcharles-forerunner-3fPXt37X6UQ-unsplash.jpg?v=1616703939959)"
+        style="background-image:url(/assets/img/tasaciones.jpg)"
       >
         <h1>
           Tasaciones
@@ -76,8 +76,8 @@
     <section>
       <div class="container mt-5 mb-5">
         <img
-          src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ftasacion2.jpg?v=1616713800754"
-          alt="ramos mejia"
+          src="/assets/img/calculadora.jpg"
+          alt="calculadora"
           height="120"
           class="float-right ml-2"
         />
@@ -122,7 +122,7 @@
           <a href="https://www.instagram.com/agostinopropiedades/"
               target="_blank">
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fig.png?v=1616708427121"
+              src="assets/img/ig.png"
               width="32"
               height="32"
             />
@@ -132,7 +132,7 @@
           <a href="https://www.facebook.com/profile.php/?id=100005778559475"
               target="_blank">
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffb.jpg?v=1616708427161"
+              src="assets/img/fb.png"
               width="30"
               height="30"
             />
@@ -150,7 +150,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fwpp.png?v=1616714255187"
+              src="assets/img/wpp.png"
               width="32"
               height="32"
             />
