--- a/quienessomos.html
+++ b/quienessomos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <link href="/assets/img/a-de-agostino.png" type="image/x-icon" rel="shortcut icon" />
+    <link href="/assets/img/a-de-agostino.ico" type="image/x-icon" rel="shortcut icon" />
     <!-- Cosas importantes pero no visibles en la pagina web-->
     <!-- Titulo en la pestaña -->
     <title>Agostino Propiedades</title>
