Update rental listing links and status messages

--- a/alquileres.html
+++ b/alquileres.html
@@ -114,6 +114,8 @@
                   <p class="card-text">
                     Departamento · 40 m² · 2 ambientes
                   </p>
+                  
+                  <div class="alert alert-danger"><center><strong> RESERVADO </strong></center></div>
                 </div>
               </div>
             </a>
@@ -123,7 +125,7 @@
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <a
               class="nav-link"
-              href="https://agostinoprop.com.ar/contacto.html"
+              href="https://departamento.mercadolibre.com.ar/MLA-1534262101-departamento-apto-profesional-en-alquiler-en-ramos-mejia-centro-_JM#origin%3Dshare%26sid%3Dshare"
               target="_blank"
             >
               <div class="card">
@@ -139,7 +141,6 @@
                     Departamento · 33 m² · 2 ambientes
                   </p>
                   
-                  <div class="alert alert-danger"><center><strong> RESERVADO </strong></center></div>
                 </div>
               </div>
             </a>
