--- a/ven_acevedo2.html
+++ b/ven_acevedo2.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <link
-      href="https://cdn.glitch.me/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FA-de-agostino.ico?v=1635812620714"
+      href="/assets/img/a-de-agostino.ico" 
       type="image/x-icon"
       rel="shortcut icon"
     />
@@ -43,7 +43,7 @@
         <a class="logo" href="/">
           <img
             class="logo"
-            src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Flogo%20sin%20bordes%20png.png?v=1618583678706"
+            src="/assets/img/logosinbordes.png"
             alt="Logo Agostino"
             width="100%"
             height="100%"
@@ -80,7 +80,7 @@
       <div
         title="PH 3Amb Lomas del Mirador"
         class="cover cover-small"
-        style="background-image: url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FFRENTE_acevedo.jpg?v=1616782106655)"
+        style="background-image:url(/assets/img/full_black.jpg)"
       ></div>
       <div class="container mt-5 mb-5">
         <div class="card">
@@ -118,7 +118,7 @@
       </div>
     </section>
 
-    
+    <!---
     <section>
       <div class="container mt-5 mb-5">
         <div class="product-stripe">
@@ -242,6 +242,8 @@
       </ul>
     </div>
 
+    --->
+
     <section>
       <div class="container mt-5 mb-5">
         <div clas="responsive i-frame">
@@ -356,7 +358,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fig.png?v=1616708427121"
+              src="/assets/img/ig.png"
               width="32"
               height="32"
             />
@@ -368,7 +370,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffb.jpg?v=1616708427161"
+              src="/assets/img/fb.png"
               width="30"
               height="30"
             />
@@ -386,7 +388,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fwpp.png?v=1616714255187"
+              src="/assets/img/wpp.png"
               width="32"
               height="32"
             />
