--- a/ven_balcarce.html
+++ b/ven_balcarce.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <link
-      href="https://cdn.glitch.me/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FA-de-agostino.ico?v=1635812620714"
+      href="/assets/img/a-de-agostino.ico" 
       type="image/x-icon"
       rel="shortcut icon"
     />
@@ -43,7 +43,7 @@
         <a class="logo" href="/">
           <img
             class="logo"
-            src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Flogo%20sin%20bordes%20png.png?v=1618583678706"
+            src="/assets/img/logosinbordes.png"
             alt="Logo Agostino"
             width="100%"
             height="100%"
@@ -77,7 +77,7 @@
 
       <div
         class="cover cover-smaller d-flex justify-content-center  p-2 "
-        style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/full_black.JPG?v=1665667300524)"
+        style="background-image:url(/assets/img/full_black.jpg)"
       >
         <h2>
           Venta
@@ -201,7 +201,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fig.png?v=1616708427121"
+              src="/assets/img/ig.png"
               width="32"
               height="32"
             />
@@ -213,7 +213,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffb.jpg?v=1616708427161"
+              src="/assets/img/fb.png"
               width="30"
               height="30"
             />
@@ -231,7 +231,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fwpp.png?v=1616714255187"
+              src="/assets/img/wpp.png"
               width="32"
               height="32"
             />
