--- a/venta_sin_info.html
+++ b/venta_sin_info.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <link href="https://cdn.glitch.me/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FA-de-agostino.ico?v=1635812620714" type="image/x-icon" rel="shortcut icon" />
+    <link 
+      href="/assets/img/a-de-agostino.ico" 
+      type="image/x-icon" 
+      rel="shortcut icon"
+      />
     <!-- Cosas importantes pero no visibles en la pagina web-->
     <!-- Titulo en la pestaña -->
     <title>Agostino Propiedades</title>
@@ -37,7 +41,7 @@
         <a class="logo" href="/">
           <img
             class="logo"
-            src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Flogo%20sin%20bordes%20png.png?v=1618583678706"
+            src="/assets/img/logosinbordes.png"
             alt="Logo Agostino"
             width="100%"
             height="100%"
@@ -69,7 +73,7 @@
       </div>
       <div
         class="cover d-flex justify-content-end align-items-start p-5 flex-column "
-        style="background-image:url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fglenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg?v=1617064299597)"
+        style="background-image:url(/assets/img/full_black.jpg)"
       >
         <h1>
           Contacto
@@ -153,7 +157,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fig.png?v=1616708427121"
+              src="/assets/img/ig.png"
               width="32"
               height="32"
             />
@@ -165,7 +169,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffb.jpg?v=1616708427161"
+              src="/assets/img/fb.png"
               width="30"
               height="30"
             />
@@ -183,7 +187,7 @@
             target="_blank"
           >
             <img
-              src="https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fwpp.png?v=1616714255187"
+              src="/assets/img/wpp.png"
               width="32"
               height="32"
             />
