--- a/ventas_order_amb_des.html
+++ b/ventas_order_amb_des.html
@@ -138,7 +138,7 @@
                 <div
                   title="Pilar Frente"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fquinta_pilar_fte.JPG?v=1616782281925)"
+                  style="background-image:url(assets/img/buenretiro_ppal.JPG)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Buen Retiro, Pilar</h5>
@@ -205,7 +205,7 @@
                 <div
                   title="Terreno Derqui"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fderqui_fte.JPG?v=1616782292949)"
+                  style="background-image:url(assets/img/derqui_ppal.JPG)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Pte. Derqui, Pilar</h5>
@@ -255,7 +255,7 @@
                 <div
                   title="colombia - Ramos"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/1_FRENTE%204.jpg?v=1680989420796)"
+                  style="background-image:url(assets/img/colombia_ppal.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ramos Mejía, La Matanza</h5>
@@ -279,7 +279,7 @@
                 <div
                   title="ven castillo"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/CASTILLO.jpeg?v=1654882566608)"
+                  style="background-image:url(assets/img/castillo_ppal.jpeg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ramos Mejía, La Matanza</h5>
@@ -303,7 +303,7 @@
                 <div
                   title="Casa 4 Amb Lomas del Mirador"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/01.jpeg?v=1651680666748)"
+                  style="background-image:url(assets/img/paso_ppal.jpeg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Lomas del Mirador, La Matanza</h5> 
@@ -327,7 +327,7 @@
                 <div
                   title="Venta Necochea"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/01NECOCHEA%202190.jpg?v=1707087046137)"
+                  style="background-image:url(assets/img/necochea_ppal.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ramos Mejía, La Matanza</h5>
@@ -502,7 +502,7 @@
                 <div
                   title="Honduras - Haedo"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/principal_honduras.JPG?v=1641618036597)"
+                  style="background-image:url(assets/img/honduras_ppal.jpeg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Haedo, Morón</h5>
@@ -605,7 +605,7 @@
                 <div
                   title="colombia - Ramos"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/2ALSINA.jpg?v=1722088037863)"
+                  style="background-image:url(assets/img/alsina_ppal.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ramos Mejía, La Matanza</h5>
@@ -630,7 +630,7 @@
                 <div
                   title="Ituzaingo"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.me/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fcarabobo.jpg?v=1635811576342)"
+                  style="background-image:url(assets/img/carabobo_ppal.JPG)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ituzaingó Norte, Ituzaingó</h5>
@@ -710,7 +710,7 @@
                 <div
                   title="ven tacuari"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/001.JPG?v=1657563740181)"
+                  style="background-image:url(assets/img/tacuari_ppal.jpeg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ramos Mejía, La Matanza</h5>
@@ -787,7 +787,7 @@
                 <div
                   title="PH 3Amb Lomas del Mirador"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2FFRENTE_acevedo.jpg?v=1616782106655)"
+                  style="background-image:url(assets/img/acevedo_ppal.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Lomas del Mirador, La Matanza</h5> 
@@ -811,7 +811,7 @@
                 <div
                   title="Alicia moreu de justo"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2F1762489482.jpg?v=1619451617930)"
+                  style="background-image:url(assets/img/aliciamdj_ppal.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Villa Madero, La Matanza</h5> 
@@ -834,7 +834,7 @@
                 <div
                   title="Ameghino"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Fameghino_frente.JPG?v=1616782110239)"
+                  style="background-image:url(assets/img/ameghino_ppal.JPG)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Villa Sarmiento, Morón</h5>
@@ -884,7 +884,7 @@
                 <div
                   title="Venta Viamonte"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/ViamonteLR.jpg?v=1729093695512)"
+                  style="background-image:url(assets/img/viamonte_ppal.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ramos Mejía, La Matanza</h5>
@@ -978,7 +978,7 @@
                 <div
                   title="Depto Lamadrid MDQ"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/1%20FRENTE%20LAMADRID.jpg?v=1722870615888)"
+                  style="background-image:url(assets/img/lamadrid_mdq_ppal.jpg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Centro, Mar del Plata</h5>
@@ -1057,7 +1057,7 @@
                 <div
                   title="chacabuco - Ramos"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/x1.jpeg?v=1651263736173)"
+                  style="background-image:url(assets/img/chacabuco_ppal.jpeg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Ramos Mejía, La Matanza</h5>
@@ -1234,7 +1234,7 @@
                 <div
                   title="Monoamb Haedo"
                   class="cover cover-small"
-                  style="background-image:url(https://cdn.glitch.global/d12d0204-1e38-4ee3-a903-f70f1ff0b383/HAEDO%20MONOAMBIENTE.jpeg?v=1651360722974)"
+                  style="background-image:url(assets/img/remedios_escalada_ppal.jpeg)"
                 ></div>
                 <div class="card-body">
                   <h5 class="card-title">Haedo, Morón</h5>
